--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,16 +6,21 @@
 		<link rel="stylesheet" href="/static/css/theme.css">
 	</head>
 	<body>
-		<div class="wrapper">
-			<header class="header">
-				<a class="brand" href="/"><%= settings.name %></a>
-				<p class="lead"><%= settings.title %></p>
-			</header>
-			<% flash.each do |category, message| %>.
-     			<div class="alert alert-<%= category %>"><%= message %></div>
-			<% end %>
-			<%= yield %>
+		<div class="container">
+			<div class="wrapper">
+				<header class="header">
+					<a class="brand" href="/"><%= settings.name %></a>
+					<p class="lead"><%= settings.title %></p>
+				</header>
+				<% flash.each do |category, message| %>.
+	     			<div class="alert alert-<%= category %>"><%= message %></div>
+				<% end %>
+				<%= yield %>
+			</div>
 		</div>
+		<a class="fork-me" href="https://github.com/marcojetson/lilidns">
+			<img src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png">
+		</a>
 		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script src="/static/js/ZeroClipboard.min.js"></script>
 		<script src="/static/js/app.js"></script>
