--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,9 +2,7 @@
 <html>
 	<head>
 		<title><%= defined?(@title) ? @title : settings.name %></title>
-		<link rel="stylesheet" href="/static/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/static/css/theme.css">
-		<link rel="stylesheet" href="/static/css/notification.css">
+		<%= css :main %>
 	</head>
 	<body>
 		<div class="container">
@@ -23,8 +21,6 @@
 			<img alt="Fork me on GitHub" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png">
 		</a>
 		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-		<script src="/static/js/ZeroClipboard.min.js"></script>
-		<script src="/static/js/jquery.notification.js"></script>
-		<script src="/static/js/app.js"></script>
+		<%= js :main %>
 	</body>
 </html>
