--- a/views/added.erb
+++ b/views/added.erb
@@ -2,11 +2,34 @@
     <label>Update token</label>
     <div class="input-group">
         <input class="form-control" type="text" value="<%= h params['token'] %>" readonly>
-        <span class="input-group-btn">
-            <button class="btn btn-default" type="button" data-clipboard-text="<%= h params['token'] %>">
+        <div class="input-group-btn split">
+            <button type="button" class="btn btn-default" data-clipboard-text="<%= h params['token'] %>">
                 <i class="glyphicon glyphicon-copy"></i>
             </button>
-        </span>
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="caret"></span>
+                <span class="sr-only">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-right">
+                <li>
+                    <a data-clipboard-text="<%= h params['token'] %>">Copy to clipboard</a>
+                </li>
+                <li>
+                    <a id="send-by-email-toggle">Send by email</a>
+                </li>
+                <li>
+                    <a>Bookmark this page</a>
+                </li>
+            </ul>
+        </div>
     </div>
     <p class="help-block">Keep this, it's useful.</p>
 </div>
+<form id="send-by-email" method="post" action="/sendmail">
+    <input type="hidden" name="token" value="<%= h params['token'] %>">
+    <div class="form-group">
+        <label>Email</label>
+        <input class="form-control" type="email" name="email">
+    </div>
+    <button type="submit" class="btn btn-default">Send</button>
+</form>
