--- a/public/static/css/theme.css
+++ b/public/static/css/theme.css
@@ -15,8 +15,8 @@ body {
 	background-image: url('../img/logo.png');
 	background-size: 100% 100%;
 	display: block;
-	height: 120px;
-	margin: 0 auto;
+	height: 113px;
+	margin: 0 auto 10px;
 	text-indent: -1000em;
 	width: 160px;
 }
