--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title><%= defined?(@title) ? @title : settings.name %></title>
+		<link rel="apple-touch-icon" href="/static/img/apple-touch-icon.png">
+		<link rel="icon" href="/static/img/favicon.ico">
 		<%= css :main %>
 	</head>
 	<body>
